vm3/out
Makefile:85: warning: overriding recipe for target 'ast.o'
Makefile:52: warning: ignoring old recipe for target 'ast.o'
g++ -std=c++17 -g -o /dev/shm/main.out main.cc asm_parser.cc asm_scanner.cc opcode.o my_helpers.o \
assembler.o assembly.o commandline.o assembler_interactive.o  vm.o prompt.o  \
svlm_scanner.cc svlm_parser.cc tree.o  svlm_interactive.o svlm_lang.o \
printer_any.o number.o operand.o tuple.o atom.o ast.o \
-lreadline
svlm_grammar.y: In member function ‘virtual int vslast::SvlmParser::parse()’:
svlm_grammar.y:278:160: error: no match for ‘operator=’ (operand types are ‘std::shared_ptr<CaseMatchIsExprAst>’ and ‘std::shared_ptr<CaseMatchElseExprAst>’)
  278 |     $$ = std::make_shared<CaseMatchElseExprAst>($3);
      |                                                                                                                                                                ^
In file included from /usr/include/c++/11/memory:77,
                 from tree.hh:6,
                 from ast.hh:3,
                 from svlm_grammar.y:24,
                 from svlm_parser.cc:50:
/usr/include/c++/11/bits/shared_ptr.h:363:9: note: candidate: ‘template<class _Yp> std::shared_ptr<_Tp>::_Assignable<const std::shared_ptr<_Yp>&> std::shared_ptr<_Tp>::operator=(const std::shared_ptr<_Yp>&) [with _Yp = _Yp; _Tp = CaseMatchIsExprAst]’
  363 |         operator=(const shared_ptr<_Yp>& __r) noexcept
      |         ^~~~~~~~
/usr/include/c++/11/bits/shared_ptr.h:363:9: note:   template argument deduction/substitution failed:
/usr/include/c++/11/bits/shared_ptr.h: In substitution of ‘template<class _Tp> template<class _Arg> using _Assignable = typename std::enable_if<std::is_assignable<std::__shared_ptr<_Tp>&, _Arg>::value, std::shared_ptr<_Tp>&>::type [with _Arg = const std::shared_ptr<CaseMatchElseExprAst>&; _Tp = CaseMatchIsExprAst]’:
/usr/include/c++/11/bits/shared_ptr.h:363:2:   required by substitution of ‘template<class _Yp> std::shared_ptr<CaseMatchIsExprAst>::_Assignable<const std::shared_ptr<_Tp>&> std::shared_ptr<CaseMatchIsExprAst>::operator=<_Yp>(const std::shared_ptr<_Tp>&) [with _Yp = CaseMatchElseExprAst]’
svlm_grammar.y:278:160:   required from here
/usr/include/c++/11/bits/shared_ptr.h:130:15: error: no type named ‘type’ in ‘struct std::enable_if<false, std::shared_ptr<CaseMatchIsExprAst>&>’
  130 |         using _Assignable = typename enable_if<
      |               ^~~~~~~~~~~
/usr/include/c++/11/bits/shared_ptr.h:374:9: note: candidate: ‘template<class _Yp> std::shared_ptr<_Tp>::_Assignable<std::auto_ptr<_Up> > std::shared_ptr<_Tp>::operator=(std::auto_ptr<_Up>&&) [with _Yp = _Yp; _Tp = CaseMatchIsExprAst]’
  374 |         operator=(auto_ptr<_Yp>&& __r)
      |         ^~~~~~~~
/usr/include/c++/11/bits/shared_ptr.h:374:9: note:   template argument deduction/substitution failed:
svlm_grammar.y:278:160: note:   ‘std::shared_ptr<CaseMatchElseExprAst>’ is not derived from ‘std::auto_ptr<_Up>’
  278 |     $$ = std::make_shared<CaseMatchElseExprAst>($3);
      |                                                                                                                                                                ^
In file included from /usr/include/c++/11/memory:77,
                 from tree.hh:6,
                 from ast.hh:3,
                 from svlm_grammar.y:24,
                 from svlm_parser.cc:50:
/usr/include/c++/11/bits/shared_ptr.h:391:9: note: candidate: ‘template<class _Yp> std::shared_ptr<_Tp>::_Assignable<std::shared_ptr<_Yp> > std::shared_ptr<_Tp>::operator=(std::shared_ptr<_Yp>&&) [with _Yp = _Yp; _Tp = CaseMatchIsExprAst]’
  391 |         operator=(shared_ptr<_Yp>&& __r) noexcept
      |         ^~~~~~~~
/usr/include/c++/11/bits/shared_ptr.h:391:9: note:   template argument deduction/substitution failed:
/usr/include/c++/11/bits/shared_ptr.h: In substitution of ‘template<class _Tp> template<class _Arg> using _Assignable = typename std::enable_if<std::is_assignable<std::__shared_ptr<_Tp>&, _Arg>::value, std::shared_ptr<_Tp>&>::type [with _Arg = std::shared_ptr<CaseMatchElseExprAst>; _Tp = CaseMatchIsExprAst]’:
/usr/include/c++/11/bits/shared_ptr.h:391:2:   required by substitution of ‘template<class _Yp> std::shared_ptr<CaseMatchIsExprAst>::_Assignable<std::shared_ptr<_Tp> > std::shared_ptr<CaseMatchIsExprAst>::operator=<_Yp>(std::shared_ptr<_Tp>&&) [with _Yp = CaseMatchElseExprAst]’
svlm_grammar.y:278:160:   required from here
/usr/include/c++/11/bits/shared_ptr.h:130:15: error: no type named ‘type’ in ‘struct std::enable_if<false, std::shared_ptr<CaseMatchIsExprAst>&>’
  130 |         using _Assignable = typename enable_if<
      |               ^~~~~~~~~~~
/usr/include/c++/11/bits/shared_ptr.h:399:9: note: candidate: ‘template<class _Yp, class _Del> std::shared_ptr<_Tp>::_Assignable<std::unique_ptr<_Up, _Ep> > std::shared_ptr<_Tp>::operator=(std::unique_ptr<_Up, _Ep>&&) [with _Yp = _Yp; _Del = _Del; _Tp = CaseMatchIsExprAst]’
  399 |         operator=(unique_ptr<_Yp, _Del>&& __r)
      |         ^~~~~~~~
/usr/include/c++/11/bits/shared_ptr.h:399:9: note:   template argument deduction/substitution failed:
svlm_grammar.y:278:160: note:   ‘std::shared_ptr<CaseMatchElseExprAst>’ is not derived from ‘std::unique_ptr<_Tp, _Dp>’
  278 |     $$ = std::make_shared<CaseMatchElseExprAst>($3);
      |                                                                                                                                                                ^
In file included from /usr/include/c++/11/memory:77,
                 from tree.hh:6,
                 from ast.hh:3,
                 from svlm_grammar.y:24,
                 from svlm_parser.cc:50:
/usr/include/c++/11/bits/shared_ptr.h:359:19: note: candidate: ‘std::shared_ptr<_Tp>& std::shared_ptr<_Tp>::operator=(const std::shared_ptr<_Tp>&) [with _Tp = CaseMatchIsExprAst]’
  359 |       shared_ptr& operator=(const shared_ptr&) noexcept = default;
      |                   ^~~~~~~~
/usr/include/c++/11/bits/shared_ptr.h:359:29: note:   no known conversion for argument 1 from ‘std::shared_ptr<CaseMatchElseExprAst>’ to ‘const std::shared_ptr<CaseMatchIsExprAst>&’
  359 |       shared_ptr& operator=(const shared_ptr&) noexcept = default;
      |                             ^~~~~~~~~~~~~~~~~
/usr/include/c++/11/bits/shared_ptr.h:383:7: note: candidate: ‘std::shared_ptr<_Tp>& std::shared_ptr<_Tp>::operator=(std::shared_ptr<_Tp>&&) [with _Tp = CaseMatchIsExprAst]’
  383 |       operator=(shared_ptr&& __r) noexcept
      |       ^~~~~~~~
/usr/include/c++/11/bits/shared_ptr.h:383:30: note:   no known conversion for argument 1 from ‘std::shared_ptr<CaseMatchElseExprAst>’ to ‘std::shared_ptr<CaseMatchIsExprAst>&&’
  383 |       operator=(shared_ptr&& __r) noexcept
      |                 ~~~~~~~~~~~~~^~~
make: *** [Makefile:9: main.out] Error 1
